tests/positive/exceptions/io_catch/input.ci
void main() {
    try {
        readFile("missing.txt");
    } catch (IoException e) {
        print(e.message + "\n");
        print(e.path + "\n");
    }
}
