tests/negative/runtime/copy_source_not_found/input.ci
void main() {
    copy("nonexistent.txt", "dst.txt");
}
